2004-01-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* README: Remove references to consolex.
	* Makefile.am: Merge-in clock/Makefile.am, console/Makefile.am,
	network/Makefile.am, startup/Makefile.am, timer/Makefile.am, 
	tod/Makefile.am.
	Use automake compilation rules.
	* clock/Makefile.am, console/Makefile.am, network/Makefile.am
	startup/Makefile.am, timer/Makefile.am, tod/Makefile.am: Remove.
	* configure.ac: Reflect changes above.	

2004-01-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 563/bsps
	* consolex/consolex.c, consolex/consolex.h, consolex/cTest.c,
	consolex/Makefile.am, consolex/README:
	Remove (Abandoned).

2004-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add PREINSTALL_DIRS.
	* consolex/Makefile.am: Add PREINSTALL_DIRS.
	* wrapup/Makefile.am: Reflect changes to libcpu.

2004-01-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add AM_CONDITIONAL(HAS_FPSP).
	* wrapup/Makefile.am: Reflect changes to libcpu.

2004-01-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Re-add dirstamps to PRE/TMPINSTALL_FILES.
	Add PRE/TMPINSTALL_FILES to CLEANFILES.
	* consolex/Makefile.am: Ditto.
	* startup/Makefile.am: Ditto.

2004-01-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/.cvsignore: Remove.
	* start/Makefile.am: Remove.
	* Makefile.am: Merge-in start/Makefile.am.
	* configure.ac: Reflect changes above.

2004-01-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate $(LIB). 
	Use noinst_DATA to trigger building libbsp.a.

2003-12-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.
	* startup/Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* consolex/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.
	* start/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.
	* startup/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.
