@@ -3,6 +3,7 @@
 	* Makefile.am: Merge-in clock/Makefile.am, console/Makefile.am
 	fatal/Makefile.am, network/Makefile.am, startup/Makefile.am,
 	timer/Makefile.am, wrapup/Makefile.am.
+	Use automake compilation rules.
 	* clock/Makefile.am, console/Makefile.am, fatal/Makefile.am,
 	network/Makefile.am, startup/Makefile.am, timer/Makefile.am,
 	wrapup/Makefile.am: Remove.
