@@ -3,10 +3,11 @@
 	* README: Remove references to consolex.
 	* Makefile.am: Merge-in clock/Makefile.am, console/Makefile.am,
 	network/Makefile.am, startup/Makefile.am, timer/Makefile.am, 
-	tod/Makefile.am.
+	tod/Makefile.am, wrapup/Makefile.am.
 	Use automake compilation rules.
 	* clock/Makefile.am, console/Makefile.am, network/Makefile.am
-	startup/Makefile.am, timer/Makefile.am, tod/Makefile.am: Remove.
+	startup/Makefile.am, timer/Makefile.am, tod/Makefile.am,
+	wrapup/Makefile.am: Remove.
 	* configure.ac: Reflect changes above.	
 
 2004-01-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
